--- a/laboratory_of_RV_5.ipynb
+++ b/laboratory_of_RV_5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,13 @@
     "import re\n",
     "import time\n",
     "import json\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "import matplotlib as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,17 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "info = client.futures_exchange_info()\n",
     "    \n",
@@ -69,17 +62,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def buy(json):\n",
+    "def buy(Json):\n",
     "    try:\n",
     "        \n",
     "        now = datetime.now()\n",
-    "        qty = partOfBalance / round(json['prices'][-1], get_precision(json['symbol']))\n",
+    "        qty = partOfBalance / round(Json['prices'][-1], get_precision(Json['symbol']) - 1)\n",
     "        order = client.create_order(\n",
-    "            symbol=json['symbol'],\n",
+    "            symbol=Json['symbol'],\n",
     "            side=Client.SIDE_BUY,\n",
     "            type=Client.ORDER_TYPE_MARKET,\n",
     "            quantity=qty\n",
@@ -106,7 +99,15 @@
     "        )\n",
     "    except Exception as E:\n",
     "        print(Exception)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def checkTicketsToSell(tickets, price, symbol):\n",
     "    for ticket in tickets:\n",
     "        if ticket['symbol'] == symbol:\n",
@@ -123,11 +124,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "jsons = []\n",
+    "Jsons = []\n",
     "def makeCoinsJson(symbol):\n",
     "    coinJson = {\n",
     "        'symbol' : symbol,\n",
@@ -142,12 +143,20 @@
     "        'stoch' : [],\n",
     "        'buySignal' : [False, False, False] \n",
     "    }\n",
-    "    jsons.append(coinJson)\n",
+    "    Jsons.append(coinJson)\n",
     "\n",
-    "def appendPrices(coin):\n",
-    "    coin = json['symbol']\n",
+    "def appendPrices(Json):\n",
+    "    coin = Json['symbol']\n",
     "    price = float(tickers.loc[tickers['symbol'] == f'{coin}']['price'])\n",
-    "    json['prices'].append(price)\n",
+    "    Json['prices'].append(price)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def Rsis(json):\n",
     "    diff = json['prices'][-2] - json['prices'][-1]\n",
@@ -162,10 +171,9 @@
     "        RSI = 100 - 100 / (1 + RS) \n",
     "        json['rsis'].append(RSI)\n",
     "    if len(json['rsis']) > 1:\n",
-    "        if json['rsis'][-1] < 25 or json['rsis'][-1] > 75:\n",
+    "        if (json['rsis'][-1] < 25 and json['rsis'][-1] > 20):\n",
     "            json['buySignal'][0] = True\n",
     "    \n",
-    "\n",
     "def Mcds(json):\n",
     "    long_EMA = sum(json['prices'][:-26:-1]) / len(json['prices'][:-26:-1])\n",
     "    short_EMA = sum(json['prices'][:-12:-1]) / len(json['prices'][:-12:-1])\n",
@@ -191,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,12 +215,34 @@
     "        if i == True:\n",
     "            signalCounter += 1\n",
     "        if signalCounter >= 2:\n",
-    "            buy(json)"
+    "            buy(json)\n",
+    "            signalCounter = 0\n",
+    "            json['buySignal'] = [False, False, False]\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def makePlotBalance():\n",
+    "    now = datetime.now()\n",
+    "    plt.plot(*range(10), balances)\n",
+    "    plt.savefig('report.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,71 +252,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_12704\\4062263958.py:20: FutureWarning: Calling float on a single element Series is deprecated and will raise a TypeError in the future. Use float(ser.iloc[0]) instead\n",
-      "  price = float(tickers.loc[tickers['symbol'] == f'{coin}']['price'])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "float division by zero\n",
-      "float division by zero\n",
-      "float division by zero\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Practice\\laboratory\\02\\laboratory_of_RV_5.ipynb Cell 9\u001b[0m line \u001b[0;36m7\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Practice/laboratory/02/laboratory_of_RV_5.ipynb#X10sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     appendPrices(json)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Practice/laboratory/02/laboratory_of_RV_5.ipynb#X10sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(json[\u001b[39m'\u001b[39m\u001b[39mprices\u001b[39m\u001b[39m'\u001b[39m]) \u001b[39m>\u001b[39m \u001b[39m15\u001b[39m: \n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Practice/laboratory/02/laboratory_of_RV_5.ipynb#X10sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m         checkIndicators(json)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Practice/laboratory/02/laboratory_of_RV_5.ipynb#X10sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m         checkTicketsToSell(tickets, json[\u001b[39m'\u001b[39m\u001b[39mprices\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m], json[\u001b[39m'\u001b[39m\u001b[39msymbol\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Practice/laboratory/02/laboratory_of_RV_5.ipynb#X10sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m time\u001b[39m.\u001b[39msleep(\u001b[39m5\u001b[39m)\n",
-      "\u001b[1;32mc:\\Practice\\laboratory\\02\\laboratory_of_RV_5.ipynb Cell 9\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Practice/laboratory/02/laboratory_of_RV_5.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mglobal\u001b[39;00m signalCounter\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Practice/laboratory/02/laboratory_of_RV_5.ipynb#X10sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(json[\u001b[39m'\u001b[39m\u001b[39mprices\u001b[39m\u001b[39m'\u001b[39m]) \u001b[39m>\u001b[39m \u001b[39m2\u001b[39m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Practice/laboratory/02/laboratory_of_RV_5.ipynb#X10sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     Rsis(json)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Practice/laboratory/02/laboratory_of_RV_5.ipynb#X10sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(json[\u001b[39m'\u001b[39m\u001b[39mprices\u001b[39m\u001b[39m'\u001b[39m]) \u001b[39m>\u001b[39m \u001b[39m30\u001b[39m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Practice/laboratory/02/laboratory_of_RV_5.ipynb#X10sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     Mcds(json)\n",
-      "\u001b[1;32mc:\\Practice\\laboratory\\02\\laboratory_of_RV_5.ipynb Cell 9\u001b[0m line \u001b[0;36m3\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Practice/laboratory/02/laboratory_of_RV_5.ipynb#X10sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m     RSI \u001b[39m=\u001b[39m \u001b[39m100\u001b[39m \u001b[39m-\u001b[39m \u001b[39m100\u001b[39m \u001b[39m/\u001b[39m (\u001b[39m1\u001b[39m \u001b[39m+\u001b[39m RS) \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Practice/laboratory/02/laboratory_of_RV_5.ipynb#X10sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m     json[\u001b[39m'\u001b[39m\u001b[39mrsis\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mappend(RSI)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Practice/laboratory/02/laboratory_of_RV_5.ipynb#X10sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m \u001b[39mif\u001b[39;00m json[\u001b[39m'\u001b[39;49m\u001b[39mrsis\u001b[39;49m\u001b[39m'\u001b[39;49m][\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m] \u001b[39m<\u001b[39m \u001b[39m25\u001b[39m \u001b[39mor\u001b[39;00m json[\u001b[39m'\u001b[39m\u001b[39mrsis\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m>\u001b[39m \u001b[39m75\u001b[39m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Practice/laboratory/02/laboratory_of_RV_5.ipynb#X10sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m     json[\u001b[39m'\u001b[39m\u001b[39mbuySignal\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m0\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i in range(100):\n",
-    "    tickers = client.get_all_tickers()\n",
-    "    tickers = pd.DataFrame(tickers)\n",
-    "    for json in jsons:\n",
-    "        appendPrices(json)\n",
-    "        if len(json['prices']) > 15: \n",
-    "            checkIndicators(json)\n",
-    "            checkTicketsToSell(tickets, json['prices'][-1], json['symbol'])\n",
-    "\n",
-    "    time.sleep(5)\n",
-    "\n",
-    "coinInfo = pd.DataFrame(jsons)\n",
-    "ticketsInfo = pd.DataFrame(tickets)\n",
-    "coinInfo\n",
-    "tickets\n"
+    "def makeStatistic(tickets):\n",
+    "    counterLoss = 0\n",
+    "    counterGain = 0\n",
+    "    for i in tickets:\n",
+    "        if i['status'] == 'loss':\n",
+    "            counterLoss += 1\n",
+    "        elif i['status'] == 'gain':\n",
+    "            counterGain += 1\n",
+    "        statistic = counterGain / counterLoss * 100\n",
+    "        print('Statistic - ', statistic)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(200):\n",
+    "    tickers = client.get_all_tickers()\n",
+    "    tickers = pd.DataFrame(tickers)\n",
+    "    for Json in Jsons:\n",
+    "        appendPrices(Json)\n",
+    "        if len(Json['prices']) > 15: \n",
+    "            checkIndicators(Json)\n",
+    "            checkTicketsToSell(tickets, Json['prices'][-1], Json['symbol'])\n",
+    "\n",
+    "    time.sleep(10)\n",
+    "\n",
+    "coinInfo = pd.DataFrame(Jsons)\n",
+    "ticketsInfo = pd.DataFrame(tickets)\n",
+    "makeStatistic(tickets)\n",
+    "coinInfo\n",
+    "tickets\n"
+   ]
   }
  ],
  "metadata": {
