--- a/Trader_RV_2/laboratory_of_RV_6.ipynb
+++ b/Trader_RV_2/laboratory_of_RV_6.ipynb
@@ -63,43 +63,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Rsis(CoindInfo):\n",
-    "    diff = CoindInfo['prices'][-2] - CoindInfo['prices'][-1]\n",
+    "def Rsis(CoinInfo):\n",
+    "    diff = CoinInfo['prices'][-2] - CoinInfo['prices'][-1]\n",
+    "    EMAUp = sum(CoinInfo) / len(CoinInfo)\n",
+    "    EMADown = sum(CoinInfo) / len(CoinInfo)\n",
     "    if diff > 0:\n",
-    "        CoindInfo['avg_gain'] += diff\n",
-    "        RS = CoindInfo['avg_gain'] / (CoindInfo['avg_loss'] * -1)\n",
+    "        CoinInfo['avg_gain'].append(diff)\n",
+    "        EMAUp = sum(CoinInfo['avg_gain']) / len(CoinInfo['avg_gain'])\n",
+    "        RS = CoinInfo['avg_gain'] / (CoinInfo['avg_loss'])\n",
     "        RSI = 100 - 100 / (1 + RS)\n",
-    "        CoindInfo['rsis'].append(RSI) \n",
+    "        CoinInfo['rsis'].append(RSI) \n",
     "    elif diff < 0:\n",
-    "        CoindInfo['avg_loss'] += diff\n",
-    "        RS = CoindInfo['avg_gain'] / (CoindInfo['avg_loss'] * -1)\n",
+    "        CoinInfo['avg_loss'].append(diff)\n",
+    "        EMADown = sum(CoinInfo['avg_loss']) / len(CoinInfo['avg_loss'])\n",
+    "        if EMADown < 0:\n",
+    "            EMADown = EMADown * -1\n",
+    "        RS = EMAUp / EMADown\n",
     "        RSI = 100 - 100 / (1 + RS) \n",
-    "        CoindInfo['rsis'].append(RSI)\n",
-    "    if len(CoindInfo['rsis']) > 1:\n",
-    "        if (CoindInfo['rsis'][-1] < 30 and CoindInfo['rsis'][-1] > 20):\n",
-    "            CoindInfo['buySignal'][0] = True\n",
+    "        CoinInfo['rsis'].append(RSI)\n",
+    "    if len(CoinInfo['rsis']) > 1:\n",
+    "        if (CoinInfo['rsis'][-1] < 30 and CoinInfo['rsis'][-1] > 20):\n",
+    "            CoinInfo['buySignal'][0] = True\n",
     "    \n",
-    "def Mcds(CoindInfo):\n",
-    "    long_EMA = sum(CoindInfo['prices'][:-26:-1]) / len(CoindInfo['prices'][:-26:-1])\n",
-    "    short_EMA = sum(CoindInfo['prices'][:-12:-1]) / len(CoindInfo['prices'][:-12:-1])\n",
-    "    short_diff_EMA = sum(CoindInfo['prices'][:-9:-1]) / len(CoindInfo['prices'][:-9:-1])\n",
-    "    CoindInfo['long_EMA'].append(long_EMA)\n",
-    "    CoindInfo['short_EMA'].append(short_EMA)\n",
-    "    CoindInfo['short_diff_EMA'].append(short_diff_EMA)\n",
-    "    MACD = round(CoindInfo['short_EMA'][-1] - CoindInfo['long_EMA'][-1], 3)\n",
+    "def Mcds(CoinInfo):\n",
+    "    long_EMA = sum(CoinInfo['prices'][:-26:-1]) / len(CoinInfo['prices'][:-26:-1])\n",
+    "    short_EMA = sum(CoinInfo['prices'][:-12:-1]) / len(CoinInfo['prices'][:-12:-1])\n",
+    "    short_diff_EMA = sum(CoinInfo['prices'][:-9:-1]) / len(CoinInfo['prices'][:-9:-1])\n",
+    "    CoinInfo['long_EMA'].append(long_EMA)\n",
+    "    CoinInfo['short_EMA'].append(short_EMA)\n",
+    "    CoinInfo['short_diff_EMA'].append(short_diff_EMA)\n",
+    "    MACD = round(CoinInfo['short_EMA'][-1] - CoinInfo['long_EMA'][-1], 3)\n",
     "    signal = short_diff_EMA * (short_EMA - long_EMA)\n",
-    "    CoindInfo['macds'].append(MACD)\n",
-    "    if len(CoindInfo['macds']) > 10 and MACD - signal > -0.6 and MACD - signal < 0.6:\n",
-    "        CoindInfo['buySignal'][1] = True\n",
+    "    CoinInfo['macds'].append(MACD)\n",
+    "    if len(CoinInfo['macds']) > 10 and MACD - signal > -0.6 and MACD - signal < 0.6:\n",
+    "        CoinInfo['buySignal'][1] = True\n",
     "        \n",
-    "def Stochastic(CoindInfo):\n",
-    "    priceLock = CoindInfo['prices'][-1]\n",
-    "    minimum = min(CoindInfo['prices'][:15])\n",
-    "    maximum = max(CoindInfo['prices'][:15])\n",
+    "def Stochastic(CoinInfo):\n",
+    "    priceLock = CoinInfo['prices'][-1]\n",
+    "    minimum = min(CoinInfo['prices'][:15])\n",
+    "    maximum = max(CoinInfo['prices'][:15])\n",
     "    Stoch = (priceLock - minimum) / (maximum - minimum) * 100\n",
-    "    CoindInfo['stoch'].append(Stoch)\n",
-    "    if len(CoindInfo['stoch']) > 10 and Stoch < 20:\n",
-    "        CoindInfo['buySignal'][2] = True"
+    "    CoinInfo['stoch'].append(Stoch)\n",
+    "    if len(CoinInfo['stoch']) > 10 and Stoch < 20:\n",
+    "        CoinInfo['buySignal'][2] = True"
    ]
   },
   {
@@ -139,6 +145,9 @@
     "            tickets.append(Ticket)\n",
     "    except Exception as E:\n",
     "        print(E)\n",
+    "        print(x)\n",
+    "        print(precision)\n",
+    "        print(coinInfo['symbol'])\n",
     "\n",
     "\n",
     "def sell(ticket):\n",
@@ -181,8 +190,8 @@
     "    coinInfo = {\n",
     "        'symbol' : symbol,\n",
     "        'prices' : [],\n",
-    "        'avg_gain' : 1,\n",
-    "        'avg_loss' : 1,\n",
+    "        'avg_gain' : [],\n",
+    "        'avg_loss' : [],\n",
     "        'rsis' : [],\n",
     "        'macds' : [],\n",
     "        'long_EMA' : [],\n",
@@ -285,18 +294,15 @@
    "source": [
     "\n",
     "for i in range(1000):\n",
-    "    try:\n",
-    "        for coinInfo in coinInfos:\n",
-    "            appendPrices(coinInfo)\n",
-    "            # balance = float(client.get_asset_balance(asset='USDT')['free'])\n",
-    "            if len(coinInfo['prices']) > 10:\n",
-    "                checkIndicators(coinInfo)\n",
-    "                checkTicketsToSell(tickets, coinInfo['prices'][-1], coinInfo['symbol'][-1])\n",
-    "            time.sleep(5)\n",
-    "        makeStatistic(tickets)\n",
-    "        makePlotBalance()\n",
-    "    except Exception as E:\n",
-    "        print(E)\n",
+    "    for coinInfo in coinInfos:\n",
+    "        appendPrices(coinInfo)\n",
+    "        # balance = float(client.get_asset_balance(asset='USDT')['free'])\n",
+    "        if len(coinInfo['prices']) > 10:\n",
+    "            checkIndicators(coinInfo)\n",
+    "            checkTicketsToSell(tickets, coinInfo['prices'][-1], coinInfo['symbol'][-1])\n",
+    "        time.sleep(5)\n",
+    "    makeStatistic(tickets)\n",
+    "    makePlotBalance()\n",
     "for ticket in tickets:\n",
     "    sell(ticket)\n",
     "\n",
